--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.main_container{
+  background-color:hsl(217, 19%, 24%);
+  color: white;
+  width: 30rem;
+  height: 18rem;
+  border-radius: 30px;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  padding: 20px 50px;
   }
-  to {
-    transform: rotate(360deg);
+  .advice_id{
+    font-family: Manrope;
+    font-size: larger;
+    color:hsl(150, 100%, 66%);
+    text-align: center;
+    margin-top: 20px;
+    
   }
-}
+  .advice{
+    font-family: Manrope;
+    font-size:large;
+    width: 100%;
+    height: 20%;
+    text-align: center;
+    font-size: 23px;
+    font-weight: 800;
+    
+  }
+  .advice_svg{
+    margin-top: 20px;
+    
+    
+  }
+  .advice_dice{
+    background-color:  hsl(150, 100%, 66%);
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+   margin-bottom: -100px ;
+   margin-top: 20px;
+  }
+  .dice{
+    margin-top: 12px;
+  }
+
+  .advice_dice:hover{
+    box-shadow: 0px 0px 10px hsl(150, 100%, 66%);
+    cursor: pointer;
+  }
+
+   @media (max-width:600px){
+
+    .main_container{
+    background-color: hsl(218, 23%, 16%);
+    width: 30rem;
+    height: 22rem;
+    
+    }
+    .advice_id{
+      font-family: Manrope;
+      font-size: larger;
+      color: green;
+      text-align: center;
+      margin-top: 10px;
+    }
+    .advice{
+      font-family: Manrope;
+      font-size:large;
+      width: 100%;
+      height: 20%;
+      text-align: center;
+      font-size: 23px;
+      font-weight: 800;
+      margin-top: 50px;
+    }
+    .advice_svg svg[width="444"]{
+      
+     margin-top:30px ; 
+    
+    }
+    .advice_dice {
+      background-color:  hsl(150, 100%, 66%);
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      margin-bottom: -60px;
+      margin-top: 40px;
+    }
+    .dice{
+      margin-top: 12px;
+    }
+
+
+  
+    .advice_dice:hover{
+      box-shadow: 0px 0px 10px hsl(150, 100%, 66%);
+      cursor: pointer;
+    }
+  
+
+  }  
